# 11

./: README.md  pyproject.toml
.github/workflows/: CHECK  main.yml
gendiff/: __init__.py  cli.py  generate.py  parser.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: correct1.txt
